--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 @font-face {
     font-family: main-font;
-    src: url(Roboto_SemiCondensed-Regular.ttf);
+    src: url(/MySportProject/resourses/fonts/Roboto_SemiCondensed-Regular.ttf);
 }
 body{
     width: 100%;
@@ -26,15 +26,14 @@ header{
 .nav{
     font-size: 15px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
 }
 .nav-a{
     text-decoration: none;
     margin: 5px;
     padding: 5px;
-    color:  black;
-    border: 1px solid black;
+    color:  white;
+    border: 1px solid white;
     border-radius: 10px;
     transition: 0.3s;
 }
@@ -44,7 +43,7 @@ header{
 }
 .line{
     width: 100%;
-    background: linear-gradient(to right, #1855ab, #1f6ad3);
+    background: linear-gradient(to right, #1855ab, #2580ff);
 }
 main{
     margin-top: 15px;
@@ -57,7 +56,32 @@ main{
     font-size: 20px;
     color: white;
 }
-
+.card-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.card{
+  display: flex;
+  width: 350px;
+  border: 2px solid #1855ab;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+.card-img{
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+  border-right: 2px solid #1855ab;
+}
+.card-text{
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  margin: 0 auto;
+}
 
 
 
@@ -101,7 +125,6 @@ main{
     width: 300px;
   }
   .nav{
-    flex-direction: row;
     justify-content: center;
   }
   .nav-a{
@@ -110,12 +133,32 @@ main{
   .about_text{
     font-size: 25px;
   }
+  .card-img{
+  width: 150px;
+  height: 150px;
+  }
+  .card{
+  width: 550px;
+  }
+  .card-text{
+  font-size: 30px;
+  }
 }
 @media(min-width:1024px){
   .nav-a{
     font-size: 25px;
   }
-    .about_text{
-    font-size: 35px;
+  .about_text{
+  font-size: 35px;
+  }
+  .card-img{
+  width: 200px;
+  height: 200px;
+  }
+  .card{
+  width: 750px;
+  }
+  .card-text{
+  font-size: 35px;
   }
 }
