--- a/style.css
+++ b/style.css
@@ -81,6 +81,27 @@ main{
   align-items: center;
   align-self: center;
   margin: 0 auto;
+  color: white;
+}
+.filter-container{
+  font-size: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.filter-item{
+    width: 160px;
+  text-align: center;
+  margin: 3px;
+  background-color: #04244e;
+  color: white;
+  border: none;
+  border: 1px solid white;
+  border-radius: 6px;
+}
+.card-a{
+  text-decoration: none;
+  color: #0bb05d;
 }
 
 
@@ -143,6 +164,14 @@ main{
   .card-text{
   font-size: 30px;
   }
+  .filter-container{
+    flex-direction: row;
+    justify-content: center;
+  }
+  .filter-item{
+    width: 200px;
+    font-size: 17px;
+  }
 }
 @media(min-width:1024px){
   .nav-a{
@@ -160,5 +189,9 @@ main{
   }
   .card-text{
   font-size: 35px;
+  }
+  .filter-item{
+    width: 250px;
+    font-size: 20px;
   }
 }
